@@ -1,5 +1,11 @@
 2008-04-07  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/data/DefaultKeyedValue.java:
+    (DefaultKeyedValue): Don't allow null key,
+    (equals): Simplified to reflect that this.key is never null.
+
+2008-04-07  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java:
     Updated various method to use fireChangeEvent(),
     * source/org/jfree/chart/renderer/xy/XYBlockRenderer.java:
